[tool.poetry]
name = "ovp-streamlit-app"
version = "0.1.0"
description = ""
authors = ["An <hoangthienan95@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
streamlit = "^1.2.0"
pandas = "^1.3.4"
kedro = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
